feat: implementar criptografia AES-256 na Fase 1
🔐 Segurança:
- SecureStorage com AES-256-GCM
- Web Crypto API nativa (zero deps)
- PBKDF2 + device fingerprinting
- Migração automática de dados legacy

🏗️ Arquitetura:
- App.js async/await para storage
- SettingsModule com status de segurança
- Fallback inteligente se criptografia falhar
- 100% compatibilidade com código existente

✅ Fase 1 completa: fundação segura estabelecida

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     </div>
 
     <!-- Carrega os módulos JS na ordem correta -->
-    <script src="js/core/Storage.js"></script>
+    <script src="js/core/SecureStorage.js"></script>
     <script src="js/core/Utils.js"></script>
     <script src="js/modules/Dashboard.js"></script>
     <script src="js/modules/Settings.js"></script>
