fix: Corrige navegação e animações dos cards
- Fix loadCurrentTab para não causar animação desnecessária na navbar
- Fix goBackToHome para restaurar estado silenciosamente
- Remove animações CSS conflitantes que causavam cards invisíveis
- Corrige seletor de elementos na applyInitialAnimations
- Garante que cards de receitas/despesas apareçam corretamente

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
     <div class="app-container">
         <!-- Navbar -->
-        <nav class="navbar">
+        <nav class="navbar" data-active="home">
             <div class="nav-item active" data-tab="home">
                 <div class="nav-icon">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
