✅ Correção da navegação: transações → home funcionando perfeitamente
- Router.js: Adicionada chamada goBackToHome() no case 'home'
- App.js: Melhorado método goBackToHome() com animação da navbar
- Transactions.js: Salvamento correto do conteúdo original da aba home
- Removidos logs de debug após confirmação do funcionamento
- Navegação agora funciona corretamente com animação da barra

--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
     <script src="js/core/Utils.js"></script>
     <script src="js/modules/Dashboard.js"></script>
     <script src="js/modules/Settings.js"></script>
+    <script src="js/modules/Transactions.js"></script>
     <script src="js/core/Router.js"></script>
     <script src="js/core/App.js"></script>
     <script src="js/app.js"></script>
