Fix focus mode and transaction cards
- Fix focus mode to only blur values on home screen, not transactions tab
- Add view-specific classes to app-container for better navigation control
- Ensure focus button maintains correct state when navigating between tabs
- Remove icons from transaction summary cards and make them more compact vertically
- Improve overall user experience with better focus mode behavior

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
 </head>
 <body>
-    <div class="app-container">
+    <div class="app-container home-view">
         <!-- Navbar -->
         <nav class="navbar" data-active="home">
             <div class="nav-item active" data-tab="home">
