--- a/index.html
+++ b/index.html
@@ -53,14 +53,6 @@
                 </div>
                 <span class="nav-text">Transações</span>
             </div>
-            <div class="nav-item" data-tab="categories">
-                <div class="nav-icon">
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
-                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M3.75 6A2.25 2.25 0 0 1 6 3.75h2.25A2.25 2.25 0 0 1 10.5 6v2.25a2.25 2.25 0 0 1-2.25 2.25H6a2.25 2.25 0 0 1-2.25-2.25V6ZM3.75 15.75A2.25 2.25 0 0 1 6 13.5h2.25a2.25 2.25 0 0 1 2.25 2.25V18a2.25 2.25 0 0 1-2.25 2.25H6A2.25 2.25 0 0 1 3.75 18v-2.25ZM13.5 6a2.25 2.25 0 0 1 2.25-2.25H18A2.25 2.25 0 0 1 20.25 6v2.25A2.25 2.25 0 0 1 18 10.5h-2.25a2.25 2.25 0 0 1-2.25-2.25V6ZM13.5 15.75a2.25 2.25 0 0 1 2.25-2.25H18a2.25 2.25 0 0 1 2.25 2.25V18A2.25 2.25 0 0 1 18 20.25h-2.25A2.25 2.25 0 0 1 13.5 18v-2.25Z"></path>
-                    </svg>
-                </div>
-                <span class="nav-text">Categorias</span>
-            </div>
             <div class="nav-item" data-tab="reports">
                 <div class="nav-icon">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
@@ -216,6 +208,13 @@
             </div>
         </div>
     </div>
+
+    <!-- Botão FAB para adicionar transação -->
+    <button class="fab-button" id="fabButton" title="Adicionar Transação">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5" d="M12 4v16m8-8H4"/>
+        </svg>
+    </button>
 
     <!-- Carrega os módulos JS na ordem correta -->
     <script src="js/core/Utils.js"></script>
