chore: padroniza animações; adiciona módulo de animações e integra nos módulos

--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
 
     <!-- Carrega os módulos JS na ordem correta -->
     <script src="js/core/Utils.js"></script>
+    <script src="js/core/Animations.js"></script>
     <script src="js/modules/Dashboard.js"></script>
     <script src="js/modules/Settings.js"></script>
     <script src="js/modules/Transactions.js"></script>
